# uniclass-rs

./: .gitignore  Cargo.toml
uniclass/: Cargo.toml
uniclass-all-2024-07/: Uniclass2015-codes-not-in-use-2024-07.csv
uniclass-data/: Cargo.toml  build.rs
uniclass-data/src/: lib.rs
uniclass-data/uniclass_tables/: Uniclass2015_Ac_v1_23.csv  Uniclass2015_Co_v1_21.csv  Uniclass2015_EF_v1_15.csv  Uniclass2015_En_v1_32.csv  Uniclass2015_FI_v1_5.csv  Uniclass2015_Ma_v1_1.csv  Uniclass2015_PC_v1_3.csv  Uniclass2015_PM_v1_25.csv  Uniclass2015_Pr_v1_35.csv  Uniclass2015_RK_v1_0.csv  Uniclass2015_Ro_v1_9.csv  Uniclass2015_SL_v1_31.csv  Uniclass2015_Ss_v1_35.csv  Uniclass2015_TE_v1_17.csv  Uniclass2015_Zz_v1_2.csv
uniclass-gen-ts/: Cargo.toml
uniclass-gen-ts/src/: main.rs
uniclass/src/: lib.rs
