[package]
authors = {workspace = true}
edition = {workspace = true}
version = {workspace = true}
name = "uniclass-data"

[dependencies]
lazy_static = "1"
uniclass = {path = "../uniclass"}

[build-dependencies]
csv = "1"
serde = {version = "1", features = ["derive"]}
uniclass = {path = "../uniclass", features = ["serde"]}
