[package]
authors = {workspace = true}
edition = {workspace = true}
version = {workspace = true}
name = "uniclass-gen-ts"

[dependencies]
csv = "1"
serde = {version = "1", features = ["derive"], optional = true}
uniclass-data = {path="../uniclass-data"}
uniclass = {path="../uniclass"}

[features]
default = ["serde"]

[build-dependencies]
csv = "1"
serde = {version = "1", features = ["derive"], optional = true}
