[package]
authors = {workspace = true}
edition = {workspace = true}
version = {workspace = true}
name = "uniclass"

[dependencies]
csv = "1"
serde = {version = "1", features = ["derive"], optional = true}

[features]
default = ["serde"]

[build-dependencies]
csv = "1"
serde = {version = "1", features = ["derive"], optional = true}
